--- a/CV.tex
+++ b/CV.tex
@@ -12,28 +12,27 @@
   Nationality: & British \\
   Address: & 194 Avenue Road Extension, Leicester, LE2 3EL \\
   Phone Number: & +44 7963599709 \\
-  Email: & \texttt{lh297@student.le.ac.uk} (Academic) \\
-  & \texttt{roastveg@hotmail.co.uk} (Other)
+  Email: & \texttt{roastveg@hotmail.co.uk}
 \end{tabular}
 
 \section*{Education}
 \begin{tabular}{rp{11.75cm}}
   July 2018 & Master of Computing (MComp) Computer Science, \textbf{University of Leicester} \\
   & 1st Class Honours Degree \\
-  & With dissertations in ``Implementing ASICs for Artificial Neural Networks'' and ``Implementing a One Instruction Set Computer'' \\
+  & With dissertations in ``Implementing~ASICs for Artificial~Neural~Networks'' and ``Implementing a One~Instruction~Set~Computer'' \\
   \multicolumn{2}{c}{} \\
   
-  August 2015 & International Summer Session, \textbf{Hankuk University of Foreign Studies} \\
+  August 2015 & International Summer Session, \textbf{Hankuk~University of Foreign~Studies} \\
   & Nine academic credits over three subjects: \\
   & ``Korean~Language~Beginner''~(A+), ``Democratization~of~South~Korea''~(A+), and ``Social~Media~Marketing''~(B) \\
   %\multicolumn{2}{c}{} \\
   
-  July 2014 & General Certificate of Education A Level, \textbf{The Skinners' School} \\
+  July 2014 & General Certificate of Education A Level, \textbf{The~Skinners'~School} \\
   & ``English~Literature''~(A), ``Maths~with~Mechanics''~(B), and ``Computing''~(B) \\
-  July 2013 & General Certificate of Education AS Level, \textbf{The Skinners' School} \\
+  July 2013 & General Certificate of Education AS Level, \textbf{The~Skinners'~School} \\
   & ``Music''~(C) \\
-  July 2012 & Free~Standing~Maths~Qualification~(A), \textbf{The Skinners' School} \\
-  July 2012 & General Certificate of Secondary Education \textbf{The Skinners' School} \\
+  July 2012 & Free~Standing~Maths~Qualification~(A), \textbf{The~Skinners'~School} \\
+  July 2012 & General Certificate of Secondary Education \textbf{The~Skinners'~School} \\
   & Ten qualifications graded at A*-C, including English and Maths
 \end{tabular}
 
@@ -54,12 +53,17 @@
 \end{tabular}
 \subsection*{Programming Languages}
 \begin{tabular}{r|p{11.75cm}}
-  Proficient & Java, C++, Haskell, C\#, Verilog, Python, Visual Basic, Lua, Shell, Promela, LaTeX \\
-  Good understanding & Assembly, C, Javascript, CSS, Ada, Golang, Erlang, Lisp, Batch, Prolog, SQL
+  Proficient & Java, C++, Haskell, C\#, Verilog, Python, Visual Basic, Lua, Shell, Javascript, CSS, LaTeX \\
+  Good understanding & Assembly, C, Ada, Golang, Erlang, Lisp, Batch, Prolog, Promela, SQL
 \end{tabular}
 
 \section*{Work Experience}
 \begin{tabular}{r|p{11.75cm}}
+  Aug 2018 & Developer \\
+  \emph{Current} & \emph{Cuttlefish Multimedia Ltd.} \\
+  & Employed as a full stack web developer for small and medium scale enterprise contracts, working in a small team to deliver complex enterprise web applications. Showcased an ability to join complex existing projects and quickly provide a service to a professional team. \\
+  \multicolumn{2}{c}{} \\
+  
   Jan 2018 & Teaching Assistant \\
   Apr 2018 & \emph{University of Leicester Department of Informatics} \\
   & Assisted with the education of undergraduate Computer Science students, including one-on-one tutoring of high level programming and theoretical concepts. Communicated teaching material with clarity, helping struggling students to understand the course content. \\
@@ -72,12 +76,7 @@
 
   Aug 2012 & Audiovisual Manager \\
   & \emph{Grammar School Head's Association} \\
-  & Provided technical support and assistance to all visiting speakers at the annual conference after special recommendation for the position. Demonstrated a professional working manner and responded to short-order bespoke requests for the arrangement of equipment. \\
-  \multicolumn{2}{c}{} \\
-
-  Mar 2012 & Training Material Writer (unpaid) \\
-  & \emph{London Underground Limited} \\
-  & Wrote brand new training material on complex electrical infrastructure in preparation for delivery to staff across the London Underground network -- requiring rapid understanding of new concepts, organisation of previously uncategorised data, and locating necessary training aids.
+  & Provided technical support and assistance to all visiting speakers at the annual conference after special recommendation for the position. Demonstrated a professional working manner and responded to short-order bespoke requests for the arrangement of equipment.
 \end{tabular}
 
 \section*{Hobbies and Interests}
