--- a/CV.tex
+++ b/CV.tex
@@ -20,6 +20,7 @@
   July 2018 & Master of Computing (MComp) Computer Science, \textbf{University of Leicester} \\
   & 1st Class Honours Degree \\
   & With dissertations in ``Implementing~ASICs for Artificial~Neural~Networks'' and ``Implementing a One~Instruction~Set~Computer'' \\
+  & Full academic transcript available \\
   \multicolumn{2}{c}{} \\
   
   August 2015 & International Summer Session, \textbf{Hankuk~University of Foreign~Studies} \\
@@ -41,7 +42,7 @@
   2015-2018 & \emph{University of Leicester Computing Society} -- held positions as: Vice President, President, and Treasurer \\
   2014-2018 & \emph{Academic Representation} -- stood as course representative on the Student Staff Committee, and as chair in 2016-2017 \\
   2018 & Won third prize at the \emph{``R. U. Hacking? 24 hour student hackathon''} \\
-  2014 & \emph{The Skinners' School} -- awarded the ``Prize for best A Level Computing Student'' \\
+  2014 & \emph{The Skinners' School} -- awarded the ``Prize for best A~Level~Computing~Student'' \\
   2013 & \emph{Air Cadet Organisation} -- recognised as a ``Qualified Aerospace Instructor'', including an ILM Level 2 in ``Leadership and Teamwork''
 \end{tabular}
 
@@ -81,6 +82,7 @@
 
 \section*{Hobbies and Interests}
 \begin{itemize}
+  %  \itemsep0em
 \item Piano and Accordion player, amateur guitar player and musical composer
 \item Actor and award winning Director with \emph{Leicester University Theatre}
 \item Avid transport enthusiast, with a partiular focus on rail transport
