Added personal changes

--- a/CV.tex
+++ b/CV.tex
@@ -10,7 +10,7 @@
 \begin{tabular}{rl}
   Date of Birth: & 2nd March 1996 \\
   Nationality: & British \\
-  Address: & 194 Avenue Road Extension, Leicester, LE2 3EL \\
+  Address: & 46A Bulwer Road, Leicester, LE2 3BU \\
   Phone Number: & +44 7963599709 \\
   Email: & \texttt{roastveg@hotmail.co.uk}
 \end{tabular}
@@ -49,20 +49,19 @@
 \section*{Languages Known}
 \subsection*{Natural Languages}
 \begin{tabular}{rl}
-  English & Birth language \\
-  Korean & Beginner
+  English & Birth language
 \end{tabular}
 \subsection*{Programming Languages}
-\begin{tabular}{r|p{11.75cm}}
-  Proficient & Java, C++, Haskell, C\#, Verilog, Python, Visual Basic, Lua, Shell, Javascript, CSS, LaTeX \\
-  Good understanding & Assembly, C, Ada, Golang, Erlang, Lisp, Batch, Prolog, Promela, SQL
+\begin{tabular}{r|p{9cm}}
+  Proficient & Rust, PHP (with Laravel), Javascript, CSS3, MySQL, Java, C/C++, Haskell, C\#, Verilog, Python, Shell, LaTeX \\
+  Good understanding & Assembly, Visual Basic, Lua, Ada, Go, Erlang, Lisp, Batch
 \end{tabular}
 
 \section*{Work Experience}
 \begin{tabular}{r|p{11.75cm}}
   Aug 2018 & Developer \\
   \emph{Current} & \emph{Cuttlefish Multimedia Ltd.} \\
-  & Employed as a full stack web developer for small and medium scale enterprise contracts, working in a small team to deliver complex enterprise web applications. Showcased an ability to join complex existing projects and quickly provide a service to a professional team. \\
+  & Employed as a full stack web developer for small and medium scale enterprise contracts, working both solo and in small teams to deliver complex enterprise web applications. Showcased an ability to join complex existing projects and quickly provide a service to a professional team. \\
   \multicolumn{2}{c}{} \\
   
   Jan 2018 & Teaching Assistant \\
@@ -83,9 +82,9 @@
 \section*{Hobbies and Interests}
 \begin{itemize}
   %  \itemsep0em
-\item Piano and Accordion player, amateur guitar player and musical composer
-\item Actor and award winning Director with \emph{Leicester University Theatre}
+\item Award winning Actor and Director with \emph{Leicester University Theatre}
 \item Avid transport enthusiast, with a partiular focus on rail transport
+\item Piano and Accordion player, amateur guitar player and musical composer
 \item Fan of world culture and cinema
 \end{itemize}
 
